--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -188,6 +188,7 @@ ja:
         name: '名前'
       post:
         location: '旅行先'
+        address: '住所'
         text: '感想'
         post_images_images: '画像'
       comment:
