--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -195,3 +195,11 @@ ja:
         comment: 'コメント'
       post_image_image: 
         image: '画像'
+ja:
+  views:
+    pagination:
+      first: <i class="fas fa-angle-double-left"></i>
+      last: <i class="fas fa-angle-double-right"></i>
+      previous: <i class="fas fa-angle-left"></i>
+      next: <i class="fas fa-angle-right"></i>
+      truncate: "..."
